k8s/deploy-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shawnpitts/backend:latest
        ports:
          - name: backend-port
            containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shawnpitts/frontend:latest
        ports:
          - name: frontend-port
            containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-port
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: backend-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: app
#   name: app-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: roster.app
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
#           - path: /roster/([^/]+)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 8080
